# Plantasia

./: .gitignore  CMakeLists.txt  GEMINI.md  balcon.json  main.cpp  migrate_to_sqlite.py
Data/: mon_balcon.json  plants.json
Data/assets/: encyclopedia.json  plantasia.db  sols.json
Data/assets/JSON/: boutures.json  encyclopedia.json  pots.json  racines.json  sols.json
include/: Catalogue.hpp  Plante.hpp
src/: Catalogue.cpp  Plante.cpp  main.cpp
src/Core/: Application.cpp  Application.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/Data/: BalconyConfig.hpp  EnumInfo.hpp  Plante.cpp  Plante.hpp  PotBouture.hpp  RacineBouture.hpp  Soil.hpp  Sol.hpp  Task.hpp  UserBalcony.cpp  UserBalcony.hpp  UserPlant.hpp  WikiData.hpp
src/Services/: CalendarManager.cpp  CalendarManager.hpp  DataBaseManagerV2.cpp  DataBaseManagerV2.hpp  DataLoader.cpp  DataLoader.hpp  DatabaseManager.cpp  DatabaseManager.hpp  SunCalculator.cpp  SunCalculator.hpp  SunGPU.cpp  SunGPU.hpp
src/States/: StateBalconySim.cpp  StateBalconySim.hpp  StateCalendar.cpp  StateCalendar.hpp  StateCatalogue.cpp  StateCatalogue.hpp  StateMainMenu.cpp  StateMainMenu.hpp  StateWiki.cpp  StateWiki.hpp
src/UI/: ColorTheme.hpp  Widgets.hpp
src/VFX/: BackgroundEngine.cpp  BackgroundEngine.hpp  BoidsSwarm.cpp  BoidsSwarm.hpp  CloudLayer.cpp  CloudLayer.hpp  ConstellationLayer.hpp  GrassSystem.cpp  GrassSystem.hpp  IBackgroundLayer.hpp  LeafSystem.cpp  LeafSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PostFX.hpp  RainSystem.cpp  RainSystem.hpp  VineSystem.cpp  VineSystem.hpp
test/: testLoader.cpp
zip/: .gitignore  CMakeLists.txt  README.md  balcon.json
zip/include/: Catalogue.hpp  Plante.hpp
zip/src/: Catalogue.cpp  Plante.cpp  main.cpp
